<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/send"
        android:enabled="true"
        android:icon="@drawable/ic_action_send"
        android:showAsAction="always"
        android:title="@string/send"
        android:titleCondensed="@string/send_condensed" />
    
    <item
    	android:id="@+id/forward"
    	android:enabled="true"
        android:icon="@drawable/ic_action_forward"
        android:showAsAction="never"
        android:title="@string/forward"
        android:titleCondensed="@string/forward_condensed" />
    
    <item
        android:id="@+id/delete"
        android:enabled="true"
        android:icon="@drawable/ic_action_delete"
        android:showAsAction="never"
        android:title="@string/delete"
        android:titleCondensed="@string/delete_condensed" />
    
    <item
    	android:id="@+id/share"
    	android:enabled="true"
        android:icon="@drawable/ic_action_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:showAsAction="never"
        android:title="@string/share"
        android:titleCondensed="@string/share_condensed" />
    
    <item
        android:id="@+id/copy"
        android:enabled="true"
        android:icon="@drawable/ic_action_copy"
        android:showAsAction="never"
        android:title="@string/copy"
        android:titleCondensed="@string/copy_condensed" />
    
    <item
    	android:id="@+id/favourite"
    	android:enabled="true"
        android:icon="@drawable/ic_action_star"
        android:showAsAction="never"
        android:title="@string/favourite"
        android:titleCondensed="@string/favourite_condensed" />
</menu>